[Avances] Se integró TailwindElement
Se integró tailwind element y se realizaron avances en el panel de
administracion.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@fortawesome/free-regular-svg-icons": "^6.4.0",
         "@fortawesome/free-solid-svg-icons": "^6.4.0",
         "@fortawesome/vue-fontawesome": "^3.0.3",
-        "swiper": "^10.0.4"
+        "swiper": "^10.0.4",
+        "tw-elements": "^1.0.0-beta2"
     }
 }
