--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.4.0",
         "@fortawesome/vue-fontawesome": "^3.0.3",
         "flowbite": "^1.8.1",
+        "flowbite-datepicker": "^1.2.2",
         "lodash": "^4.17.21",
         "sweetalert2": "^11.7.20",
         "vue-select": "^4.0.0-beta.6"
