--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-basic-styles": "^39.0.2",
+        "@ckeditor/ckeditor5-build-classic": "^39.0.2",
+        "@ckeditor/ckeditor5-code-block": "^39.0.2",
+        "@ckeditor/ckeditor5-vue": "^5.1.0",
         "@fortawesome/free-brands-svg-icons": "^6.4.0",
         "@fortawesome/free-regular-svg-icons": "^6.4.0",
         "@fortawesome/free-solid-svg-icons": "^6.4.0",
