--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "@ckeditor/ckeditor5-basic-styles": "^39.0.2",
         "@ckeditor/ckeditor5-build-classic": "^39.0.2",
+        "@ckeditor/ckeditor5-build-inline": "^40.1.0",
         "@ckeditor/ckeditor5-code-block": "^39.0.2",
         "@ckeditor/ckeditor5-vue": "^5.1.0",
         "@fortawesome/free-brands-svg-icons": "^6.4.0",
