--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@ckeditor/ckeditor5-basic-styles": "^39.0.2",
+        "@ckeditor/ckeditor5-build-balloon": "^41.0.0",
         "@ckeditor/ckeditor5-build-classic": "^39.0.2",
         "@ckeditor/ckeditor5-build-inline": "^40.1.0",
         "@ckeditor/ckeditor5-code-block": "^39.0.2",
