--- a/package.json
+++ b/package.json
@@ -1,40 +1,50 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build"
-    },
-    "devDependencies": {
-        "@inertiajs/vue3": "^1.0.0",
-        "@tailwindcss/forms": "^0.5.2",
-        "@tailwindcss/typography": "^0.5.2",
-        "@vitejs/plugin-vue": "^4.0.0",
-        "autoprefixer": "^10.4.7",
-        "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.5",
-        "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.0",
-        "vite": "^4.0.0",
-        "vue": "^3.2.31"
-    },
-    "dependencies": {
-        "@ckeditor/ckeditor5-basic-styles": "^39.0.2",
-        "@ckeditor/ckeditor5-build-balloon": "^41.0.0",
-        "@ckeditor/ckeditor5-build-classic": "^39.0.2",
-        "@ckeditor/ckeditor5-build-inline": "^40.1.0",
-        "@ckeditor/ckeditor5-code-block": "^39.0.2",
-        "@ckeditor/ckeditor5-vue": "^5.1.0",
-        "@fortawesome/free-brands-svg-icons": "^6.4.0",
-        "@fortawesome/free-regular-svg-icons": "^6.4.0",
-        "@fortawesome/free-solid-svg-icons": "^6.4.0",
-        "@fortawesome/vue-fontawesome": "^3.0.3",
-        "@headlessui/vue": "^1.7.16",
-        "flowbite": "^1.8.1",
-        "flowbite-datepicker": "^1.2.2",
-        "flowbite-vue": "^0.1.0",
-        "lodash": "^4.17.21",
-        "sweetalert2": "^11.7.20",
-        "vue-select": "^4.0.0-beta.6"
-    }
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build"
+  },
+  "devDependencies": {
+    "@inertiajs/vue3": "^1.0.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.2",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.7",
+    "axios": "^1.1.2",
+    "laravel-vite-plugin": "^0.7.5",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.0",
+    "vite": "^4.0.0",
+    "vue": "^3.2.31"
+  },
+  "dependencies": {
+    "@ckeditor/ckeditor5-basic-styles": "^39.0.2",
+    "@ckeditor/ckeditor5-build-balloon": "^41.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^39.0.2",
+    "@ckeditor/ckeditor5-build-inline": "^40.1.0",
+    "@ckeditor/ckeditor5-code-block": "^39.0.2",
+    "@ckeditor/ckeditor5-vue": "^5.1.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@headlessui/vue": "^1.7.16",
+    "flowbite": "^1.8.1",
+    "flowbite-datepicker": "^1.2.2",
+    "flowbite-vue": "^0.1.0",
+    "lodash": "^4.17.21",
+    "sweetalert2": "^11.7.20",
+    "vue-select": "^4.0.0-beta.6"
+  },
+  "name": "maet",
+  "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
+  "version": "1.0.0",
+  "main": "postcss.config.js",
+  "directories": {
+    "test": "tests"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
