--- a/public/.htaccess
+++ b/public/.htaccess
@@ -25,18 +25,52 @@
 </IfModule>
 
 # Expires cache
+# <IfModule mod_expires.c>
+#     ExpiresActive On
+#     ExpiresDefault "access plus 30 days"
+#     ExpiresByType image/jpg "access plus 30 days"
+#     ExpiresByType image/png "access plus 30 days"
+#     ExpiresByType image/gif "access plus 30 days"
+#     ExpiresByType image/jpeg "access plus 30 days"
+#     ExpiresByType text/css "access plus 1 days"
+#     ExpiresByType image/svg+xml "access plus 30 days"
+#     ExpiresByType image/x-icon "access plus 60 days"
+#     ExpiresByType application/pdf "access plus 2 days"
+#     ExpiresByType text/javascript "access plus 12 hours"
+#     ExpiresByType application/x-javascript "access plus 12 hours"
+#     ExpiresByType application/javascript "access plus 12 hours"
+# </IfModule>
+
 <IfModule mod_expires.c>
-    ExpiresActive On
-    ExpiresDefault "access plus 30 days"
-    ExpiresByType image/jpg "access plus 30 days"
-    ExpiresByType image/png "access plus 30 days"
-    ExpiresByType image/gif "access plus 30 days"
-    ExpiresByType image/jpeg "access plus 30 days"
-    ExpiresByType text/css "access plus 1 days"
-    ExpiresByType image/svg+xml "access plus 30 days"
-    ExpiresByType image/x-icon "access plus 60 days"
-    ExpiresByType application/pdf "access plus 2 days"
-    ExpiresByType text/javascript "access plus 12 hours"
-    ExpiresByType application/x-javascript "access plus 12 hours"
-    ExpiresByType application/javascript "access plus 12 hours"
+  ExpiresActive On
+
+ # Images
+  ExpiresByType image/jpeg "access plus 1 year"
+  ExpiresByType image/gif "access plus 1 year"
+  ExpiresByType image/png "access plus 1 year"
+  ExpiresByType image/webp "access plus 1 year"
+  ExpiresByType image/svg+xml "access plus 1 year"
+  ExpiresByType image/x-icon "access plus 1 year"
+
+  # Video
+  ExpiresByType video/webm "access plus 1 year"
+  ExpiresByType video/mp4 "access plus 1 year"
+  ExpiresByType video/mpeg "access plus 1 year"
+
+  # Fonts
+  ExpiresByType font/ttf "access plus 1 year"
+  ExpiresByType font/otf "access plus 1 year"
+  ExpiresByType font/woff "access plus 1 year"
+  ExpiresByType font/woff2 "access plus 1 year"
+  ExpiresByType application/font-woff "access plus 1 year"
+  ExpiresByType application/font-woff2 "access plus 1 year"
+
+  # CSS, JavaScript
+  ExpiresByType text/css "access plus 1 year"
+  ExpiresByType text/javascript "access plus 1 year"
+  ExpiresByType application/javascript "access plus 1 year"
+
+  # Others
+  ExpiresByType application/pdf "access plus 1 year"
+  ExpiresByType image/vnd.microsoft.icon "access plus 1 year"
 </IfModule>
