--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
+  "name": "maet",
+  "version": "1.0.0",
   "private": true,
-  "type": "module",
+  "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
+  "author": "",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "dev": "vite"
   },
-  "devDependencies": {
-    "@inertiajs/vue3": "^1.0.0",
-    "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/typography": "^0.5.2",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "autoprefixer": "^10.4.7",
-    "axios": "^1.1.2",
-    "laravel-vite-plugin": "^0.7.5",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.0",
-    "vite": "^4.0.0",
-    "vue": "^3.2.31"
-  },
+  "main": "postcss.config.js",
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
@@ -27,17 +18,28 @@
     "flowbite": "^1.8.1",
     "flowbite-datepicker": "^1.2.2",
     "lodash": "^4.17.21",
+    "register-service-worker": "^1.7.2",
     "sweetalert2": "^11.7.20",
     "vue-select": "^4.0.0-beta.6"
   },
-  "name": "maet",
-  "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
-  "version": "1.0.0",
-  "main": "postcss.config.js",
+  "devDependencies": {
+    "@inertiajs/vue3": "^1.0.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.2",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
+    "autoprefixer": "^10.4.7",
+    "axios": "^1.1.2",
+    "laravel-vite-plugin": "^0.7.5",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.0",
+    "vite": "^4.0.0",
+    "vue": "^3.2.31"
+  },
   "directories": {
     "test": "tests"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "type": "module"
 }
