--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "flowbite-datepicker": "^1.2.2",
     "lodash": "^4.17.21",
     "sweetalert2": "^11.7.20",
-    "vue-select": "^4.0.0-beta.6"
+    "vue-select": "^4.0.0-beta.6",
+    "vue3-marquee": "^4.2.0-beta.1"
   },
   "name": "maet",
   "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
