--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,6 @@
+# Solve Cloudflare CDN issues
+Header always set Content-Security-Policy: upgrade-insecure-requests
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
