htaccess no follow pages

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -23,10 +23,16 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 
-    # Evitar indexación para URLs que contienen /admin/login/register/
-    <FilesMatch "^(admin|login|register)">
-        Header set X-Robots-Tag "noindex, nofollow"
-    </FilesMatch>
+    # Evitar indexación para URLs que contienen /admin/
+    RewriteCond %{REQUEST_URI} ^/admin/ [NC]
+    RewriteRule ^ - [E=NOINDEXFOLLOW:true]
+
+    # Evitar indexación para URLs específicas como /login y /register
+    RewriteCond %{REQUEST_URI} ^/(login|register) [NC]
+    RewriteRule ^ - [E=NOINDEXFOLLOW:true]
+
+    # Agregar la directiva noindex y nofollow para páginas que cumplan las condiciones anteriores
+    # Header set X-Robots-Tag "noindex, nofollow" env=NOINDEXFOLLOW
 </IfModule>
 
 
