--- a/public/.htaccess
+++ b/public/.htaccess
@@ -28,33 +28,32 @@
 <IfModule mod_expires.c>
     ExpiresActive On
 
-    # Images
-    ExpiresByType image/jpeg "access plus 1 year"
-    ExpiresByType image/gif "access plus 1 year"
-    ExpiresByType image/png "access plus 1 year"
-    ExpiresByType image/webp "access plus 4 months"
-    ExpiresByType image/svg+xml "access plus 1 year"
-    ExpiresByType image/x-icon "access plus 1 year"
-
-    # Video
-    ExpiresByType video/webm "access plus 1 year"
-    ExpiresByType video/mp4 "access plus 1 year"
-    ExpiresByType video/mpeg "access plus 1 year"
-
-    # Fonts
-    ExpiresByType font/ttf "access plus 1 year"
-    ExpiresByType font/otf "access plus 1 year"
-    ExpiresByType font/woff "access plus 1 year"
-    ExpiresByType font/woff2 "access plus 1 year"
-    ExpiresByType application/font-woff "access plus 1 year"
-    ExpiresByType application/font-woff2 "access plus 1 year"
-
-    # CSS, JavaScript
-    ExpiresByType text/css "access plus 1 year"
-    ExpiresByType text/javascript "access plus 1 year"
-    ExpiresByType application/javascript "access plus 1 year"
-
-    # Others
-    ExpiresByType application/pdf "access plus 1 year"
-    ExpiresByType image/vnd.microsoft.icon "access plus 1 year"
+    ExpiresDefault                              "access plus 1 month"
+    ExpiresByType text/cache-manifest           "access plus 0 seconds"
+    ExpiresByType text/html                     "access plus 0 seconds"
+    ExpiresByType text/xml                      "access plus 0 seconds"
+    ExpiresByType application/xml               "access plus 0 seconds"
+    ExpiresByType application/json              "access plus 0 seconds"
+    ExpiresByType application/rss+xml           "access plus 1 hour"
+    ExpiresByType application/atom+xml          "access plus 1 hour"
+    ExpiresByType image/x-icon                  "access plus 1 week"
+    ExpiresByType image/gif                     "access plus 4 months"
+    ExpiresByType image/png                     "access plus 4 months"
+    ExpiresByType image/jpeg                    "access plus 4 months"
+    ExpiresByType image/webp                    "access plus 4 months"
+    ExpiresByType video/ogg                     "access plus 4 months"
+    ExpiresByType audio/ogg                     "access plus 4 months"
+    ExpiresByType video/mp4                     "access plus 4 months"
+    ExpiresByType video/webm                    "access plus 4 months"
+    ExpiresByType image/avif                    "access plus 4 months"
+    ExpiresByType image/avif-sequence           "access plus 4 months"
+    ExpiresByType text/x-component              "access plus 1 month"
+    ExpiresByType font/ttf                      "access plus 4 months"
+    ExpiresByType font/otf                      "access plus 4 months"
+    ExpiresByType font/woff                     "access plus 4 months"
+    ExpiresByType font/woff2                    "access plus 4 months"
+    ExpiresByType image/svg+xml                 "access plus 4 months"
+    ExpiresByType application/vnd.ms-fontobject "access plus 1 month"
+    ExpiresByType text/css                      "access plus 1 year"
+    ExpiresByType application/javascript        "access plus 1 year"
 </IfModule>
